# azerothcore-wotlk

./: .gitignore  .gitmodules  FLOW_EXILE_AZEROS.md  ci_test.txt  dev-archive-phase1.md  migration-guide.md
.github/scripts/: build_mpq.py  build_mpq_pure.py  csv2dbc.py  dbc_schema.json  download-maps.sh
.github/workflows/: acoremods-build.yml  core-build-nopch.yml  core-build-pch.yml  core_modules_build.yml  fork-build.yml  macos_build.yml  windows_build.yml
addons/POEStarMap/: POEStarMap.lua  POEStarMap.toc  POEStarMap.xml
apps/installer/includes/os_configs/: windows.sh
docs/superpowers/plans/: 2026-06-28-poe-full-development-plan.md  2026-06-28-poe-talent-demo.md
docs/superpowers/specs/: 2026-06-28-poe-talent-system-design.md
lua_scripts/: POE_AddonComm.lua  POE_CombatEvents.lua  POE_Data.lua  POE_EffectHandler.lua  POE_ResetItem.lua  POE_TalentManager.lua
modules/: CMakeLists.txt
modules/mod-eluna/: CMakeLists.txt
modules/mod-eluna/src/: ALE_loader.cpp
modules/mod-eluna/src/LuaEngine/libs/rigtorp/: SPSCQueue.h
sql/: poe_schema.sql
src/server/game/Entities/Object/: Object.cpp
src/server/game/Entities/Player/: PlayerQuest.cpp
src/server/game/Globals/: ObjectMgr.cpp  ObjectMgr.h
src/server/game/Handlers/: ItemHandler.cpp
src/server/game/Scripting/: ScriptMgr.h
src/server/game/Scripting/ScriptDefines/: AllCreatureScript.h  AllItemScript.cpp  AllItemScript.h  CreatureScript.cpp  PlayerScript.cpp  PlayerScript.h  UnitScript.cpp  UnitScript.h  (+2 more)
src/server/game/Server/: WorldSession.cpp  WorldSession.h
src/server/game/World/: World.cpp
(+1 files in other folders)
